app-dev/styles/base/layout.css
/* ... */
	.hero-content-block h3 {
		text-align: center;
		margin: 0.25rem auto 0.75rem;
	}

	.hero-content-block h3 > * {
		display: block;
		clear: both;
		line-height: 1.1;
	}

	.hero-content-block h3 .subject {
		font-size: 0.8rem;
		font-weight: normal;
	}

	.hero-content-block h3 .hero-word {
		margin-top: 0.4rem;
		font-size: 2.19rem;
	}

	.hero-content-block h3 .subtitle {
		font-size: 0.6rem;
	}

	.hero-content-block .hero-content-features {
		margin: 0.25rem auto;
		text-align: center;
	}

	.hero-content-block .hero-content-features > .f-list > li {
		display: inline-block;
		vertical-align: top;
	}

	.hero-content-block .hero-content-features > .f-list > li .label {
		display: block;
		font-size: 0.6rem;
	}
	.hero-content-block .hero-content-features > .f-list > li .content {
		display: block;
		font-size: 1rem;
	}


	.hero-content-block.hero-content-block-style-1 { /* homepage */
		}
		.hero-content-block.hero-content-block-style-1 h3 .subject {
			font-size: 1rem;
		}
		.hero-content-block.hero-content-block-style-1 h3 .hero-word {
			margin-top: 0.5rem;
			font-size: 3.19rem;
		}
		.hero-content-block.hero-content-block-style-1 .hero-content-features > .f-list > li {
			margin: 0 0.8rem 0;
		}


	.hero-content-block.hero-content-block-style-4 { /* trading-account-register-succeeded page */
		padding-top: 0.1rem;
		padding-bottom: 0;
		}
		.hero-content-block.hero-content-block-style-4 h3 .subject {
			font-size: 0.9rem;
		}
		.hero-content-block.hero-content-block-style-4 h3 .hero-word {
			margin-top: 0.6rem;
			font-size: 2.5rem;
		}
		.hero-content-block.hero-content-block-style-4 .hero-content-features > .f-list > li {
			margin: 0 0.8rem 0;
			width: 35%;
		}


	.hero-content-block.hero-content-block-style-2 { /* in personal center page */
		}
		.hero-content-block.hero-content-block-style-2 h3 {
			margin-bottom: 0.25rem;
		}


	.color-inverted .hero-content-block.hero-content-block-style-2 { /* in pages such as newbie-reserved-assets */
		padding-bottom: 0.6rem;
		margin-bottom: 0;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 h3 .hero-word {
			margin-top: 0.6rem;
			margin-bottom: 1.4rem;
		}

		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li {
			font-weight: lighter;
			width: 33.3%;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-1 {
			text-align: left;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-3 {
			text-align: right;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-1 > .label {
			text-indent: 0;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-3 > .label {
			margin-right: -0.7em;
		}


	.hero-content-block.hero-content-block-style-3 { /* in newbie-call-to-action page */
		margin-top: 0;
		padding-top: 0.75rem;
		padding-bottom: 0.25rem;
		background-repeat: no-repeat;
		background-position: center -2.4rem; /* offset background for page-header bg */
		}
		.hero-content-block.hero-content-block-style-3 h3 {
			margin-top: 0.25rem;
			margin-bottom: 1.5rem;
		}
		.hero-content-block.hero-content-block-style-3 h3 .subject {
			font-size: 0.7rem;
			letter-spacing: 0.05em;
			font-weight: 200;
		}
		.hero-content-block.hero-content-block-style-3 h3 .hero-word {
			margin-top: 0.5rem;
			font-size: 2.6rem;
		}
		.hero-content-block.hero-content-block-style-3 .hero-content-features {
			margin: 0.25rem auto;
			text-align: center;
		}
		.hero-content-block.hero-content-block-style-3 .hero-content-features .columns > .col {
			font-weight: lighter;
			width: 45%;
		}
		.hero-content-block.hero-content-block-style-3 .hero-content-features .columns > hr.vert {
			height: 2.7rem;
			margin-top: 0.2rem;
			opacity: 0.1;
		}

		.hero-content-block.hero-content-block-style-3 .hero-content-features .f-list li .label {
			margin: 0.1rem auto;
		}

		.hero-content-block.hero-content-block-style-3 .hero-content-features .f-list li .content {
			margin: 0.5rem auto;
		}


	.hero-content-block.hero-content-block-style-5 { /* in newbie-call-to-action page */
		margin-top: 0;
		padding-top: 0.5rem;
		padding-bottom: 0.5rem;
		background-repeat: no-repeat;
		background-position: center -2.4rem; /* offset background for page-header bg */
		}
		.hero-content-block.hero-content-block-style-5 h3 .hero-word + .label,
		.hero-content-block.hero-content-block-style-5 .f-list .label {
			font-size: 0.6rem;
			font-weight: 100;
			opacity: 0.5;
		}
		.hero-content-block.hero-content-block-style-5 .hero-content-features .columns > .col,
		.hero-content-block.hero-content-block-style-5 h3 {
			text-align: left;
			display: inline-block;
			width: 58%;
			margin: 0;
		}
		.hero-content-block.hero-content-block-style-5 .hero-content-features .columns > .col + .col,
		.hero-content-block.hero-content-block-style-5 h3 + h3 {
			width: 40%;
		}
		.hero-content-block.hero-content-block-style-5 h3 {
			margin-bottom: 0.85rem;
		}
		.hero-content-block.hero-content-block-style-5 h3 .subject {
			font-size: 0.7rem;
			letter-spacing: 0.05em;
			font-weight: 200;
		}
		.hero-content-block.hero-content-block-style-5 h3 .hero-word {
			margin-top: 0.5rem;
			margin-bottom: 0.55rem;
			font-size: 2.4rem;
		}
		.hero-content-block.hero-content-block-style-5 h3 .hero-word .percentage-value::after,
		.hero-content-block.hero-content-block-style-5 h3 .hero-word sub {
			font-size: 0.35em;
		}
		.hero-content-block.hero-content-block-style-5 .hero-content-features {
			margin: 0.25rem auto;
			text-align: center;
		}
		.hero-content-block.hero-content-block-style-5 .hero-content-features .columns > .col {
			font-weight: lighter;
		}
		.hero-content-block.hero-content-block-style-5 .hero-content-features .f-list li .label {
			margin: 0.1rem auto;
		}
/* ... */

